work on work part

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -49,10 +49,13 @@
 }
 
 /* Active Link Styles */
-/* .active__link,
+ .active-link,
 .nav__link:hover {
-    color: var(--title-color-dark);
-} */
+    color: rgb(126, 126, 13);
+} 
+.scroll-header{
+    box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
+}
 
 /* Responsive Styles */
 @media screen and (max-width: 768px) {
